# usb-forensic

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  deny.toml  index.html  mkdocs.yml  release-plz.toml  sitemap.xml
.github/workflows/: ci.yml  fuzz.yml  release-plz.yml  release.yml
competitive-landscape/: index.html
decisions/: index.html
decisions/0001-correlation-and-consistency-model/: index.html
decisions/0002-delegate-parsing-to-fleet-crates/: index.html
decisions/0003-scheme-agnostic-volume-analysis/: index.html
decisions/0004-bitlocker-to-go-detection/: index.html
docs/: competitive-landscape.md  feature-parity.md  index.md  prd.md  privacy.md  roadmap.md  terms.md  validation.md
docs/decisions/: 0001-correlation-and-consistency-model.md  0002-delegate-parsing-to-fleet-crates.md  0003-scheme-agnostic-volume-analysis.md  0004-bitlocker-to-go-detection.md  README.md
feature-parity/: index.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: boot_sectors.rs  ipod_plist.rs  system_profiler.rs  unified_log.rs
prd/: index.html
privacy/: index.html
roadmap/: index.html
search/: search_index.json
src/: correlate.rs  docx.rs  lib.rs  model.rs  pdf.rs  reconcile.rs  render.rs  report.rs  source.rs  timeline.rs  tz.rs
src/sources/: apple_ipod.rs  device_image.rs  driver_framework.rs  emdmgmt.rs  jumplist.rs  kernel_pnp.rs  lnk.rs  macos_unified_log.rs  macos_usb.rs  mod.rs  mountpoints2.rs  partition_diag.rs  peripheral.rs  volume_cache.rs
supply-chain/: config.toml
terms/: index.html
tests/: apple_ipod_real.rs  device_image_real.rs  driver_framework_real.rs  e01_real.rs  kernel_pnp_real.rs  macos_unified_log_real.rs  macos_usb_real.rs
validation/: index.html
