[package]
name = "usb-forensic"
version = "0.0.0"
edition = "2021"
rust-version = "1.96.0"
license = "Apache-2.0"
authors = ["Albert Hui <albert@securityronin.com>"]
description = "USB device-history correlation engine — reconstructs USB connection history from every Windows artifact and scores cross-source timestamp consistency. Pipeline-native, reproducible, panic-free."
repository = "https://github.com/SecurityRonin/usb-forensic"
homepage = "https://github.com/SecurityRonin/usb-forensic"
documentation = "https://docs.rs/usb-forensic"
readme = "README.md"
keywords = ["forensics", "dfir", "usb", "incident-response", "timeline"]
categories = ["parser-implementations", "command-line-utilities"]
# Working alpha (core + setupapi/LNK sources + usb4n6 CLI run and are tested). Keep
# unpublished until the registry source lands (peripheral-core 0.2) and validation is
# release-ready, then set a real version (0.1.0) and remove this. See README "Status".
publish = false
exclude = [
    "/.github",
    "/docs",
    "/tests/data",
    "/fuzz",
    "/.pre-commit-config.yaml",
    "/renovate.json",
    "/.gitleaks.toml",
    "/mkdocs.yml",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lnk-core = "0.4"
forensicnomicon = "1.2"
# Device-connection domain reader: setupapi.dev.log, SYSTEM-hive Enum device keys
# (+ MountedDevices drive-letter join), and Linux kernel logs, each decoded to
# DeviceConnection records.
peripheral-core = "0.7"
# Opens a SYSTEM hive in memory so peripheral-core's registry reader can decode it.
winreg-core = "0.2"
# macOS Apple-device connection history (com.apple.iPod.plist); 1.10 ships the
# quick-xml >= 0.41 fix for RUSTSEC-2026-0194/0195 (needs Rust 1.88, within our 1.96 pin).
plist = "1.10"
# Partition/Diagnostic event-log (EID 1006) disk-arrival extractor → PartitionDiagEvent.
winevt-extract = "0.4"
# Parse the event-log ISO-8601 TimeCreated into epoch seconds.
jiff = "0.2"
# Fleet reader crates are wired in per-source, under TDD (see docs/roadmap.md):
#   winreg-artifacts   USBSTOR / MountedDevices / MountPoints2 / WPDBUSENUM / VolumeInfoCache / Amcache
#   peripheral-core    setupapi.dev.log device-install events
#   winevt-forensic    Partition/Diagnostic event log (volume serials)
#   lnk-core           recent-file LNK volume-serial join
#   forensicnomicon    the report vocabulary (Finding / Severity / Category)

[lints]
workspace = true

[workspace]
resolver = "2"

# Paranoid Gatekeeper: this crate will consume attacker-controllable, already-decoded
# USB-history events and correlate them. Never panic, never trust a value.
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all                      = { level = "warn", priority = -1 }
pedantic                 = { level = "warn", priority = -1 }
correctness              = { level = "deny", priority = -1 }
suspicious               = { level = "deny", priority = -1 }
unwrap_used              = { level = "deny", priority = 0 }
expect_used              = { level = "deny", priority = 0 }
module_name_repetitions  = { level = "allow", priority = 1 }
must_use_candidate       = { level = "allow", priority = 1 }
missing_errors_doc       = { level = "allow", priority = 1 }
missing_panics_doc       = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap       = { level = "allow", priority = 1 }
cast_sign_loss           = { level = "allow", priority = 1 }
cast_precision_loss      = { level = "allow", priority = 1 }
similar_names            = { level = "allow", priority = 1 }
